--- a/style.css
+++ b/style.css
@@ -259,7 +259,7 @@ footer .email{
 }
 /*sabad kharid*/
 .cart{
-    position: fixed;
+    position: absolute;
     top: 0;
     right: -100%;
     width: 360px;
@@ -285,6 +285,12 @@ footer .email{
     gap: 15px;
     
 }
+
+.cart-content {
+    height: calc(100% - 207px);
+    overflow-y: auto;
+}
+
 .cart-img{
     width: 80px;
     height: 80px;
@@ -311,6 +317,7 @@ footer .email{
     font-size: 18px;
     color: red;
     cursor: pointer;
+    width: 20px;
 }
 .total{
     display: flex;
